tests/should_fail/opaque_unproveable.coma
module M_test
  use creusot.prelude.Any
  
  predicate opaque
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec test (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] opaque} s1 | s1 = return {_ret} ] ] [ & _ret: () = Any.any_l () ])
    [ return (result: ()) -> (! return {result}) ]
end
